syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/carg/pb";

message ClearCartRequest {
  string sessionId = 1;
}
